add lineitem
